--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Campal | 캠팔",
+  "name": "캠핑 렌탈 플랫폼 캠팔",
   "icons": [
     {
       "src": "favicon.ico",
