--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-slick": "^0.29.0",
         "redux": "^4.1.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.3",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
